# aliros

./: .editorconfig  .pylintrc  README.md  aliros.spec  pyproject.toml  setup.py
aliros/: __main__.py  stack.py
aliros/commands/: __init__.py  abandon_stack.py  create_stack.py  delete_stack.py  describe_resource_type.py  describe_resource_type_template.py  describe_stack.py  describe_stack_resource.py  describe_stack_template.py  list_regions.py  list_resource_types.py  list_stack_events.py  list_stack_resources.py  list_stacks.py  preview_stack.py  update_stack.py  validate_template.py
src/aliros/: __main__.py  alicloud.py
src/aliros/commands/: __init__.py  abandon_stack.py  create_stack.py  delete_stack.py  list_regions.py  list_resource_types.py  list_stacks.py  update_stack.py
tests/: conftest.py  test_cli.py
